# mapcity

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  buildproject  legacy_run.sh  premake4.lua  run  run.sh
OLD MAPCITY/: CMakeLists.txt  README.md
OLD MAPCITY/shader/: DepthVert.shader  GBufferVert.shader  ShadowFrag.shader  ShadowVert.shader  SimpleTexFrag.shader
OLD MAPCITY/src/: Building.cpp  Building.hpp  Bundesstrasse.cpp  BusinessZone.hpp  Camera.hpp  CuboidObject.hpp  DemandFunction.cpp  DemandFunction.hpp  Einfamilienhaus.cpp  Einfamilienhaus.hpp  Fbo.cpp  Fbo.hpp  Graphics.cpp  GraphicsInterface.hpp  GrosserLaden.hpp  Hexagon.hpp  HexagonObject.hpp  Household.hpp  InputHandler.cpp  InputHandler.hpp  KleinerLaden.cpp  Landstrasse.cpp  Main.cpp  Map.cpp  Object.cpp  Object.hpp  Path.cpp  Path.hpp  PolygonObject.cpp  Render.hpp  ResidentialBuilding.hpp  ResidentialZone.cpp  ResidentialZone.hpp  Road.cpp  Road.hpp  Shader.cpp  Shader.hpp  SplineObject.hpp  Terrain.hpp  Time.cpp  (+8 more)
assets/: random.tga  tex_font.tga
doc/: CMakeLists.txt  README.md  doxygen.config.in
libace/: CMakeLists.txt  README.md  camera.cpp  camera.h  config.h  error.cpp  error.h  framebuffer.cpp  framebuffer.h  gbuffer.cpp  gbuffer.h  glm.h  libace.cpp  libace.h  light.cpp  light.h  mesh.cpp  mesh.h  object.cpp  object.h  objectinterface.h  ogl.h  scenegraph.cpp  scenegraph.h  shader.cpp  shader.h  stl.h  texture.cpp  texture.h
libace/demo/: CMakeLists.txt  main.cpp
libace/shader/: gbuffer_record.shader  gbuffer_render.shader  post_processing.shader  shadow_mapping.shader
libace/uml/: diagramm.uml
resources/: cars.db  lanes.db
resources/xml/: buildings.xml  test.xml  transit.xml
shader/: DepthFrag.shader  DepthVert.shader  GBufferFrag.shader  GBufferVert.shader  SimpleFrag.shader  SimpleFragmentShader.shader  SimpleTexFrag.shader  SimpleTexVert.shader  SimpleVert.shader  gbuffer_record.shader  gbuffer_render.shader
shader/geometries/: circlesegment.vert  circlesegment_legacy.vert  cube.vert  cube_legacy.vert  fan.vert  fan_legacy.vert  multicolor_cube.vert  multicolor_cube_legacy.vert  multicolor_quad.vert  multicolor_quad_legacy.vert  quad.vert  quad_legacy.vert  trapezoid.vert  trapezoid_legacy.vert
shader/lighting/: direct_lighting.frag  direct_lighting_legacy.frag
shader/test/: color.frag  color_legacy.frag  instancedraw.vert  instancedraw_legacy.vert
src/: Bitmap.hpp  Building.cpp  Building.hpp  BuildingInterface.hpp  Bundesstrasse.cpp  Bundesstrasse.hpp  BusinessBuilding.cpp  BusinessBuilding.hpp  BusinessZone.cpp  BusinessZone.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CuboidObject.cpp  CuboidObject.hpp  DemandFunction.cpp  DemandFunction.hpp  Einfamilienhaus.cpp  Einfamilienhaus.hpp  Fbo.cpp  Fbo.hpp  Game.cpp  Game.hpp  Graphics.hpp  GrosserLaden.cpp  GrosserLaden.hpp  Hexagon.cpp  Hexagon.hpp  HexagonObject.cpp  HexagonObject.hpp  Household.cpp  Household.hpp  HouseholdConstants.hpp  IndustrialZone.cpp  IndustrialZone.hpp  InputHandler.cpp  InputHandler.hpp  KleinerLaden.cpp  KleinerLaden.hpp  Landstrasse.cpp  (+45 more)
src/buildings/: building.cpp  building.hpp
src/engine/: camera.cpp  camera.hpp  debug.cpp  debug.hpp  engine.cpp  engine.hpp  glmincludes.hpp  handler.cpp  handler.hpp  light.cpp  light.hpp  window.cpp  window.hpp  windowthread.cpp  windowthread.hpp
src/engine/gl/: buffer.cpp  buffer.hpp  fbo.cpp  fbo.hpp  glincludes.hpp  globject.cpp  globject.hpp  ibo.cpp  ibo.hpp  loop.cpp  loop.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  shaderstoragebuffer.cpp  shaderstoragebuffer.hpp  texture.cpp  texture.hpp  uniform.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/engine/objects/: circle.cpp  circle.hpp  cone.cpp  cone.hpp  cuboid.cpp  cuboid.hpp  object.cpp  object.hpp  objectinterface.cpp  objectinterface.hpp  quadrilateral.cpp  quadrilateral.hpp  sphere.cpp  sphere.hpp  spline.cpp  spline.hpp  triangle.cpp  triangle.hpp
src/engine/passes/: basiclightingpass.cpp  basiclightingpass.hpp  basiclightingrender.cpp  basiclightingrender.hpp  basicpass.cpp  basicpass.hpp  basicrender.cpp  basicrender.hpp  gbufferpass.cpp  gbufferpass.hpp  gbufferrender.cpp  gbufferrender.hpp  normalpass.cpp  normalpass.hpp  normalrender.cpp  normalrender.hpp  pass.hpp  raycastingpass.cpp  raycastingpass.hpp  raycomputingpass.cpp  raycomputingpass.hpp  raytracingrender.cpp  raytracingrender.hpp  render.hpp  texturepass.cpp  texturepass.hpp
src/mapcity/: game.cpp  game.hpp  graphics.cpp  graphics.hpp
src/mapcity/building/: building.cpp  building.hpp  residentialbuilding.cpp  residentialbuilding.hpp
src/mapcity/geom/: point.hpp  segment.hpp  vector.hpp
src/mapcity/network/: buildingnode.cpp  buildingnode.hpp  edge.cpp  edge.hpp  network.cpp  network.hpp  node.cpp  node.hpp  path.cpp  path.hpp  pedestriannode.cpp  pedestriannode.hpp  transitnode.cpp  transitnode.hpp  units.hpp
src/mapcity/people/: household.cpp  household.hpp  people.cpp  people.hpp
src/mapcity/util/: random.cpp  random.hpp
src/mapcity/xml/: buildingdatabase.cpp  buildingdatabase.hpp  database.cpp  database.hpp  tinyxml2.cpp  tinyxml2.h  transitdatabase.cpp  transitdatabase.hpp
src/network/: path.cpp  path.hpp
src/objects/: object.hpp  objectmanager.cpp  objectmanager.hpp
src/objects/buildings/: building.cpp  building.hpp
src/objects/streets/: intersection.cpp  intersection.hpp  laneconfig.cpp  laneconfig.hpp  street.cpp  street.hpp
src/objects/terrain/: terrain.cpp  terrain.hpp
src/objects/vehicles/: car.cpp  car.hpp  vehicle.cpp  vehicle.hpp
src/rendering/: conversion.hpp  drawable.cpp  drawable.hpp  drawablemanager.cpp  drawablemanager.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  manager.cpp  manager.hpp  rendering.cpp  rendering.hpp
src/simulation/: simulation.cpp  simulation.hpp  updatable.cpp  updatable.hpp  updatablemanager.cpp  updatablemanager.hpp
src/streets/: street.cpp  street.hpp
src/terrain/: terrain.cpp  terrain.hpp
